--- a/static/templates/Recovery_IS/Recovery_IS_PickTable.html
+++ b/static/templates/Recovery_IS/Recovery_IS_PickTable.html
@@ -331,7 +331,7 @@
 </style>
 
 <div class="content-wrapper">
-  <h5 class="text-left mt-0 mb-3">Input Screening / Pick Table</h5>
+  <h5 class="text-left mt-0 mb-3">Recovery Input Screening / Pick Table</h5>
   <div class="row">
     <div class="col-12 grid-margin stretch-card">
       <div class="card">
@@ -500,7 +500,7 @@
                             padding-right: 1px;
                           "
                         >
-                          Q
+                          T
                         </div>
                         <div
                           title="Tray Scan"
@@ -517,7 +517,7 @@
                             padding-right: 1px;
                           "
                         >
-                          S
+                          T
                         </div>
                         <div
                           title="Tray Scan"
@@ -534,7 +534,7 @@
                             padding-right: 1px;
                           "
                         >
-                          W
+                          T
                         </div>
                       </div>
                     </td>
@@ -782,7 +782,7 @@
                             padding-right: 1px;
                           "
                         >
-                          Q
+                          T
                         </div>
                         <div
                           title="Tray Scan"
@@ -799,7 +799,7 @@
                             padding-right: 1px;
                           "
                         >
-                          S
+                          T
                         </div>
                       </div>
                     </td>
@@ -1042,7 +1042,7 @@
                             padding-right: 1px;
                           "
                         >
-                          Q
+                          T
                         </div>
                         <div
                           title="Tray Scan"
@@ -1059,7 +1059,7 @@
                             padding-right: 1px;
                           "
                         >
-                          S
+                          T
                         </div>
                         <div
                           title="Tray Scan"
@@ -1076,7 +1076,7 @@
                             padding-right: 1px;
                           "
                         >
-                          W
+                          T
                         </div>
                       </div>
                     </td>
@@ -1304,7 +1304,7 @@
                     <div style="border: 1px solid #ccc; padding: 8px; font-weight: bold;">Tray Qty</div>
 
                     <div style="border: 1px solid #ccc; padding: 8px;">1</div>
-                    <div style="border: 1px solid #ccc; padding: 8px;">Tray0012345</div>
+                    <div style="border: 1px solid #ccc; padding: 8px;">Tray001</div>
                     <div style="border: 1px solid #ccc; padding: 8px;">
                       <div style="display: flex; align-items: center; gap: 14px;">
                         <span>10</span>
