--- a/static/templates/Recovery_IS/Recovery_IS_RejectTable.html
+++ b/static/templates/Recovery_IS/Recovery_IS_RejectTable.html
@@ -464,7 +464,7 @@
 </style>
 
 <div class="content-wrapper">
-  <h5 class="text-left mt-0 mb-3">Input Screening / Rejected Table</h5>
+  <h5 class="text-left mt-0 mb-3">Recovery Input Screening / Rejected Table</h5>
   <div class="row">
     <div class="col-12 grid-margin stretch-card">
       <div class="card">
@@ -642,22 +642,6 @@
                                 <tbody>
                                   <tr>
                                     <td>Reason - A</td>
-                                    <td>50</td>
-                                  </tr>
-                                  <tr>
-                                    <td>Reason - B</td>
-                                    <td>50</td>
-                                  </tr>
-                                  <tr>
-                                    <td>Reason - C</td>
-                                    <td>50</td>
-                                  </tr>
-                                  <tr>
-                                    <td>Reason - D</td>
-                                    <td>50</td>
-                                  </tr>
-                                  <tr>
-                                    <td>Reason - E</td>
                                     <td>50</td>
                                   </tr>
                                 </tbody>
