--- a/static/assets/css/vertical-layout-light/style.css
+++ b/static/assets/css/vertical-layout-light/style.css
@@ -10217,7 +10217,7 @@ progress {
   --bs-table-color-state: initial;
   --bs-table-bg-state: initial;
   --bs-table-color: var(--bs-emphasis-color);
-  --bs-table-bg: var(--bs-body-bg);
+  --bs-table-bg: #ffffff00;
   --bs-table-border-color: #CED4DA;
   --bs-table-accent-bg: transparent;
   --bs-table-striped-color: var(--bs-emphasis-color);
@@ -10231,13 +10231,7 @@ progress {
   vertical-align: top;
   border-color: var(--bs-table-border-color);
 }
-.table > :not(caption) > * > *, .jsgrid .jsgrid-table > :not(caption) > * > * {
-  padding: 0.5rem 0.5rem;
-  color: var(--bs-table-color-state, var(--bs-table-color-type, var(--bs-table-color)));
-  background-color: var(--bs-table-bg);
-  border-bottom-width: var(--bs-border-width);
-  box-shadow: inset 0 0 0 9999px var(--bs-table-bg-state, var(--bs-table-bg-type, var(--bs-table-accent-bg)));
-}
+
 .table > tbody, .jsgrid .jsgrid-table > tbody {
   vertical-align: inherit;
 }
@@ -21288,7 +21282,7 @@ code {
 }
 
 .text-primary, .list-wrapper .completed .remove {
-  color: #117057 !important;
+  color: #028084!important;
 }
 
 .text-secondary, .list-wrapper .remove {
