--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -43,7 +43,7 @@
   thead th {
     position: sticky;
     top: 0;
-    background-color: #117057 !important;
+    background-color: #028084!important;
     color: #fff !important;
     z-index: 10;
     box-shadow: 0 2px 2px -1px rgba(0, 0, 0, 0.4);
@@ -423,9 +423,29 @@
           padding: 12px 2vw 12px 2vw;
         }
       }
-      .footer {
-        z-index: 10;
-      }
+
+      footer.footer span,
+footer.footer {
+  font-weight: 400 !important; /* Normal weight */
+}
+      /* Fixed footer at the bottom of the viewport */
+   footer.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    z-index: 100;
+    background: #F5F7FF;
+    box-shadow: 0 -1px 4px rgba(0,0,0,0.05);
+    height: 32px;
+    line-height: 32px;
+    font-size: 13px;
+    padding: 0 10px;
+    text-align: center; /* Center the copyright */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
     </style>
 </head>
 
@@ -783,12 +803,12 @@
               </ul>
             </div>
           </li>
-          <span class="menu-title" style="font-size: 10px; padding: 4px; font-weight: 600;">Recovery Module</span>
+          <span class="menu-title" style="font-size: 10px; padding: 3px; font-weight: 600;">Recovery Module</span>
 
            <li class="nav-item">
             <a class="nav-link" data-bs-toggle="collapse" href="#form-elements" aria-expanded="false" aria-controls="ui-advanced">
               <i class="fa fa-recycle menu-icon"></i>
-              <span class="menu-title">Recovery Input Screening</span>
+              <span class="menu-title" style="line-height:1.3 !important;">Recovery Input Screening</span>
               <i class="menu-arrow"></i>
             </a>
             <div class="collapse" id="form-elements">
