--- a/static/templates/Day_Planning/DP_PickTable.html
+++ b/static/templates/Day_Planning/DP_PickTable.html
@@ -619,13 +619,10 @@
                           );
                           color: white;
                           font-weight: bold;
-            line-height: 20px;
-
+                          line-height: 20px;
                           text-align: center;
                           padding-top: 1px;
-                          padding-right: 1px;
-  "
-                        "
+                          padding-right: 1px;"
                       >
                         T
                       </div>
